# catch2_template

./: .gitignore  CMakeLists.txt  README.md  STATIC_ANALYSIS.md
exe/: CMakeLists.txt  DEBUGGING.md  README.md  main.cpp
src/: CMakeLists.txt  calc.cpp
src/inc/: calc.h
test/: CMakeLists.txt  calc_test.cpp  main.cpp
